<resources>
    <string name="app_name">calendarRange</string>
    <string name="select_time">选择时间</string>

    <string name="cancel">取消</string>
    <string name="done">确认</string>
    <string name="title_time_picker">选择时间</string>


    <string name="cdrp_mon_zh">一</string>
    <string name="cdrp_tue_zh">二</string>
    <string name="cdrp_wed_zh">三</string>
    <string name="cdrp_thu_zh">四</string>
    <string name="cdrp_fri_zh">五</string>
    <string name="cdrp_sat_zh">六</string>
    <string name="cdrp_sun_zh">日</string>
</resources>
