<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llTitleWeekContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@android:color/white"
    android:elevation="3dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tvDayOfWeek1"
        style="@style/WeekDayTitleVerticalStyle"
        android:tag="dayOfWeek1"
        android:text="@string/cdrp_sun_zh" />

    <TextView
        android:id="@+id/tvDayOfWeek2"
        style="@style/WeekDayTitleVerticalStyle"
        android:tag="dayOfWeek2"
        android:text="@string/cdrp_mon_zh" />

    <TextView
        android:id="@+id/tvDayOfWeek3"
        style="@style/WeekDayTitleVerticalStyle"
        android:tag="dayOfWeek3"
        android:text="@string/cdrp_tue_zh" />

    <TextView
        android:id="@+id/tvDayOfWeek4"
        style="@style/WeekDayTitleVerticalStyle"
        android:tag="dayOfWeek4"
        android:text="@string/cdrp_wed_zh" />

    <TextView
        android:id="@+id/tvDayOfWeek5"
        style="@style/WeekDayTitleVerticalStyle"
        android:tag="dayOfWeek5"
        android:text="@string/cdrp_thu_zh" />

    <TextView
        android:id="@+id/tvDayOfWeek6"
        style="@style/WeekDayTitleVerticalStyle"
        android:tag="dayOfWeek6"
        android:text="@string/cdrp_fri_zh" />

    <TextView
        android:id="@+id/tvDayOfWeek7"
        style="@style/WeekDayTitleVerticalStyle"
        android:tag="dayOfWeek7"
        android:text="@string/cdrp_sat_zh" />

</LinearLayout>